--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
 .main-container {
     width: 100%;
     height: 100vh;
-    background-color: orange;
+    background-color: white;
 
     .circle-container {
         width: 400px;
         height: 400px;
-        background-color: white;
+        background-color: #ddd;
         border-radius: 50%;
         position: absolute;
         z-index: 1;
