--- a/src/app/features/timer/timer.component.scss
+++ b/src/app/features/timer/timer.component.scss
@@ -8,17 +8,19 @@
 }
 
 .semiCircle:nth-child(1) {
-  background-color: red;
+  background-color: #088b8b;
   z-index: 2;
 }
 
 .semiCircle:nth-child(2) {
-  background-color: blue;
+  // background-color: red;
+  background-color: #088b8b;
+
   z-index: 3;
 }
 
 .semiCircle:nth-child(3) {
-  background-color: white;
+  background-color: #ddd;
   z-index: 4;
   // display: none;
 }
@@ -26,7 +28,7 @@
 .outermostCircle {
   width: 390px;
   height: 390px;
-  background-color: black;
+  background-color: white;
   border-radius: 50%;
   z-index: 5;
   // display: none;
