feat: add clock component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main class="main-container center">
   <app-timer class="circle-container center"></app-timer>
+  <app-timer-clock style="z-index: 9999;"></app-timer-clock>
 </main>
 
 <router-outlet />
