--- a/src/app/features/timer-clock/timer-clock.component.html
+++ b/src/app/features/timer-clock/timer-clock.component.html
@@ -1,1 +1,7 @@
-<p>timer-clock works!</p>
+<div class="timer center">
+    <div> {{hrs}} </div>
+    <div class="colon">:</div>
+    <div> {{mins}} </div>
+    <div class="colon">:</div>
+    <div> {{secs}} </div>
+</div>
