fix: remove OnInit

--- a/src/app/features/timer-clock/timer-clock.component.html
+++ b/src/app/features/timer-clock/timer-clock.component.html
@@ -1,4 +1,4 @@
-<div class="timer center">
+<div #timer class="timer center">
     <div> {{hrs}} </div>
     <div class="colon">:</div>
     <div> {{mins}} </div>
